--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
     <h4>GDP, Islamabad</h4>
     <h5>March 2021 - Present</h5>
       <ul>
-        <li>Knowlegdable in C++</li>
+        <li>Knowledgeable in C++</li>
         <li>Teaching students in spare time</li>
       </ul>
 
